--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env  NODE_ENV=test jest --verbose --runInBand --forceExit",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -17,18 +18,20 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongodb": "^3.7.3",
     "mongoose": "^7.1.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "eslint": "^8.40.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   },
   "jest": {
-    "testEnvironment": "node",
-    "globalTeardown": "./tests/teardown.js"
+    "testEnvironment": "node"
   }
 }
